--- a/index.html
+++ b/index.html
@@ -40,3 +40,15 @@
         </button>
     </div>
 </header>
+<section id="about" class="py-24 px-6 max-w-5xl mx-auto text-center">
+    <h2 class="text-4xl font-bold mb-8">About The Podcast</h2>
+    <p class="text-gray-400 mb-6 text-lg max-w-3xl mx-auto">
+        TechWave breaks down complex topics into digestible insights and explores stories of personal growth.
+    </p>
+    <div class="grid grid-cols-2 lg:grid-cols-4 gap-10 border-t border-gray-800 pt-16">
+        <div><h3 class="text-4xl font-bold text-[#00FF85]">150K+</h3><p class="text-xs text-gray-500 uppercase mt-2">Monthly Listeners</p></div>
+        <div><h3 class="text-4xl font-bold text-[#00FF85]">200+</h3><p class="text-xs text-gray-500 uppercase mt-2">Episodes Published</p></div>
+        <div><h3 class="text-4xl font-bold text-[#00FF85]">4.9 ★</h3><p class="text-xs text-gray-500 uppercase mt-2">Average Rating</p></div>
+        <div><h3 class="text-4xl font-bold text-[#00FF85]">50+</h3><p class="text-xs text-gray-500 uppercase mt-2">Industry Experts</p></div>
+    </div>
+</section>
