adding episode and feature section

--- a/index.html
+++ b/index.html
@@ -52,3 +52,26 @@
         <div><h3 class="text-4xl font-bold text-[#00FF85]">50+</h3><p class="text-xs text-gray-500 uppercase mt-2">Industry Experts</p></div>
     </div>
 </section>
+<section class="py-24 px-6 max-w-[1200px] mx-auto">
+    <h2 class="text-4xl font-bold text-center mb-20">Why Choose TechWave</h2>
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+        <div class="feature-card md:row-span-2">
+            <img src="./assets/headphone.png" class="w-12 mb-6" alt="Audio">
+            <h4 class="text-xl font-bold mb-4">Premium Audio</h4>
+            <p class="text-gray-400 text-sm">Experience crystal-clear sound with professional gear.</p>
+        </div>
+        </div>
+</section>
+
+<section id="episodes" class="py-24 px-6 max-w-[1200px] mx-auto">
+    <h2 class="text-4xl font-bold text-center mb-20">Featured Episodes</h2>
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
+        <div class="episode-card">
+            <div class="relative group">
+                <img src="./assets/episode1.png" class="w-full" alt="AI">
+                <a href="#" class="play-btn">▶</a>
+            </div>
+            <div class="p-8"><h4 class="text-xl font-bold mb-4">Future of AI</h4></div>
+        </div>
+    </div>
+</section>
