--- a/index.html
+++ b/index.html
@@ -75,3 +75,19 @@
         </div>
     </div>
 </section>
+<section id="host" class="py-24 px-6 max-w-6xl mx-auto">
+    <div class="host-section p-10 lg:p-16 rounded-[40px] flex flex-col lg:flex-row items-center gap-14 border border-gray-800">
+        <img src="./assets/host.png" class="w-56 h-56 rounded-full border-4 border-[#FF00CC] object-cover" alt="Alex Kumar">
+        <div class="text-center lg:text-left">
+            <h3 class="text-3xl font-bold mb-5">Alex Kumar</h3>
+            <p class="text-gray-400 text-lg">Tech entrepreneur and productivity expert.</p>
+        </div>
+    </div>
+</section>
+
+<footer class="footer-bg py-24 px-6 text-center">
+    <div class="text-5xl font-bold mb-10">Tech<span class="gradient-text">Wave</span></div>
+    <p class="text-gray-600 text-xs">© 2026 TechWave Podcast. All rights reserved.</p>
+</footer>
+</body>
+</html>
