--- a/index.html
+++ b/index.html
@@ -5,89 +5,229 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TechWave - Podcast</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body class="bg-[#0F011E] text-white font-['Inter']">
+
     <nav class="flex justify-between items-center px-6 lg:px-96 py-6 max-w-full mx-auto sticky top-0 bg-[#0F011E] z-50">
         <div class="text-3xl font-bold">
             Tech<span class="gradient-text">Wave</span>
         </div>
+
         <ul class="hidden lg:flex space-x-12 text-gray-300 font-medium">
             <li><a href="#about" class="hover:text-white transition">About</a></li>
             <li><a href="#episodes" class="hover:text-white transition">Episodes</a></li>
             <li><a href="#host" class="hover:text-white transition">Host</a></li>
         </ul>
-        <button class="hidden lg:block nav-btn px-8 py-3 rounded-full font-semibold">Subscribe →</button>
+
+        <button class="hidden lg:block nav-btn px-8 py-3 rounded-full font-semibold">
+            Subscribe →
+        </button>
+
         <img src="./assets/hamburger-menu.png" class="w-8 lg:hidden cursor-pointer" alt="Menu">
     </nav>
+
     <header class="hero-bg py-20 px-6 text-center border-b border-gray-900">
-    <div class="relative inline-block mb-10">
-        <img src="./assets/hero-circle.png" class="w-56 lg:w-72 mx-auto" alt="Hero Graphic">
-        <img src="./assets/microphone.png" class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-14 lg:w-16 animate-float" alt="Microphone">
-        <span class="absolute top-3 right-6 bg-[#00FF85] text-black text-xs font-bold px-3 py-1 rounded-full">NEW</span>
-    </div>
-    <h1 class="text-5xl lg:text-7xl font-bold mb-6">TechWave</h1>
-    <p class="text-gray-400 max-w-xl mx-auto mb-10 text-lg leading-relaxed">
-        Your daily dose of tech insights, productivity hacks, and personal growth.
-    </p>
-    <div class="flex flex-col sm:flex-row justify-center gap-6">
-        <button class="spotify-btn px-8 py-4 rounded-full font-bold flex items-center justify-center gap-3">
-            <img src="./assets/spotify.png" class="w-5" alt="Spotify"> Listen On Spotify
-        </button>
-        <button class="subscribe-outline-btn px-8 py-4 rounded-full font-bold flex items-center justify-center gap-3">
-            <img src="./assets/message.png" class="w-5" alt="Mail"> Subscribe
-        </button>
-    </div>
-</header>
-<section id="about" class="py-24 px-6 max-w-5xl mx-auto text-center">
-    <h2 class="text-4xl font-bold mb-8">About The Podcast</h2>
-    <p class="text-gray-400 mb-6 text-lg max-w-3xl mx-auto">
-        TechWave breaks down complex topics into digestible insights and explores stories of personal growth.
-    </p>
-    <div class="grid grid-cols-2 lg:grid-cols-4 gap-10 border-t border-gray-800 pt-16">
-        <div><h3 class="text-4xl font-bold text-[#00FF85]">150K+</h3><p class="text-xs text-gray-500 uppercase mt-2">Monthly Listeners</p></div>
-        <div><h3 class="text-4xl font-bold text-[#00FF85]">200+</h3><p class="text-xs text-gray-500 uppercase mt-2">Episodes Published</p></div>
-        <div><h3 class="text-4xl font-bold text-[#00FF85]">4.9 ★</h3><p class="text-xs text-gray-500 uppercase mt-2">Average Rating</p></div>
-        <div><h3 class="text-4xl font-bold text-[#00FF85]">50+</h3><p class="text-xs text-gray-500 uppercase mt-2">Industry Experts</p></div>
-    </div>
-</section>
-<section class="py-24 px-6 max-w-[1200px] mx-auto">
-    <h2 class="text-4xl font-bold text-center mb-20">Why Choose TechWave</h2>
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-        <div class="feature-card md:row-span-2">
-            <img src="./assets/headphone.png" class="w-12 mb-6" alt="Audio">
-            <h4 class="text-xl font-bold mb-4">Premium Audio</h4>
-            <p class="text-gray-400 text-sm">Experience crystal-clear sound with professional gear.</p>
+        <div class="relative inline-block mb-10">
+            <img src="./assets/hero-circle.png" class="w-56 lg:w-72 mx-auto" alt="Hero Graphic">
+            <img src="./assets/microphone.png" 
+     class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-14 lg:w-16 animate-float" 
+     alt="Microphone">
+            <span class="absolute top-3 right-6 bg-[#00FF85] text-black text-xs font-bold px-3 py-1 rounded-full">
+                NEW
+            </span>
         </div>
-        </div>
-</section>
 
-<section id="episodes" class="py-24 px-6 max-w-[1200px] mx-auto">
-    <h2 class="text-4xl font-bold text-center mb-20">Featured Episodes</h2>
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
-        <div class="episode-card">
-            <div class="relative group">
-                <img src="./assets/episode1.png" class="w-full" alt="AI">
-                <a href="#" class="play-btn">▶</a>
+        <h1 class="text-5xl lg:text-7xl font-bold mb-6">TechWave</h1>
+
+        <p class="text-gray-400 max-w-xl mx-auto mb-10 text-lg leading-relaxed">
+            Your daily dose of tech insights, productivity hacks, and personal growth.
+        </p>
+
+        <div class="flex flex-col sm:flex-row justify-center gap-6">
+            <button class="spotify-btn px-8 py-4 rounded-full font-bold flex items-center justify-center gap-3">
+                <img src="./assets/spotify.png" class="w-5" alt="Spotify"> Listen On Spotify
+            </button>
+
+            <button class="subscribe-outline-btn px-8 py-4 rounded-full font-bold flex items-center justify-center gap-3">
+                <img src="./assets/message.png" class="w-5" alt="Mail"> Subscribe
+            </button>
+        </div>
+    </header>
+
+    <section id="about" class="py-24 px-6 max-w-5xl mx-auto text-center">
+        <h2 class="text-4xl font-bold mb-8">About The Podcast</h2>
+
+        <p class="text-gray-400 mb-6 text-lg max-w-3xl mx-auto">
+            TechWave is your go-to podcast for staying ahead in the fast-paced world of technology. We break down complex topics into digestible insights, explore productivity strategies that actually work, and share stories of personal growth from industry leaders.
+        </p>
+
+        <p class="text-gray-400 mb-16 text-lg max-w-3xl mx-auto">
+            Join thousands of young professionals and tech enthusiasts who start their day with TechWave.
+        </p>
+
+        <div class="grid grid-cols-2 lg:grid-cols-4 gap-10 border-t border-gray-800 pt-16">
+            <div>
+                <h3 class="text-4xl font-bold text-[#00FF85]">150K+</h3>
+                <p class="text-xs text-gray-500 uppercase mt-2">Monthly Listeners</p>
             </div>
-            <div class="p-8"><h4 class="text-xl font-bold mb-4">Future of AI</h4></div>
+            <div>
+                <h3 class="text-4xl font-bold text-[#00FF85]">200+</h3>
+                <p class="text-xs text-gray-500 uppercase mt-2">Episodes Published</p>
+            </div>
+            <div>
+                <h3 class="text-4xl font-bold text-[#00FF85]">4.9 ★</h3>
+                <p class="text-xs text-gray-500 uppercase mt-2">Average Rating</p>
+            </div>
+            <div>
+                <h3 class="text-4xl font-bold text-[#00FF85]">50+</h3>
+                <p class="text-xs text-gray-500 uppercase mt-2">Industry Experts</p>
+            </div>
         </div>
-    </div>
-</section>
-<section id="host" class="py-24 px-6 max-w-6xl mx-auto">
-    <div class="host-section p-10 lg:p-16 rounded-[40px] flex flex-col lg:flex-row items-center gap-14 border border-gray-800">
-        <img src="./assets/host.png" class="w-56 h-56 rounded-full border-4 border-[#FF00CC] object-cover" alt="Alex Kumar">
-        <div class="text-center lg:text-left">
-            <h3 class="text-3xl font-bold mb-5">Alex Kumar</h3>
-            <p class="text-gray-400 text-lg">Tech entrepreneur and productivity expert.</p>
-        </div>
-    </div>
-</section>
+    </section>
 
-<footer class="footer-bg py-24 px-6 text-center">
-    <div class="text-5xl font-bold mb-10">Tech<span class="gradient-text">Wave</span></div>
-    <p class="text-gray-600 text-xs">© 2026 TechWave Podcast. All rights reserved.</p>
-</footer>
+    <section class="py-24 px-6 max-w-[1200px] mx-auto">
+        <h2 class="text-4xl font-bold text-center mb-20">Why Choose TechWave</h2>
+
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+            <div class="feature-card md:row-span-2">
+                <img src="./assets/headphone.png" class="w-12 mb-6" alt="Audio">
+                <h4 class="text-xl font-bold mb-4">Premium Audio Quality</h4>
+                <p class="text-gray-400 text-sm leading-relaxed">
+                    Experience crystal-clear sound with professional-grade recording equipment and expert audio engineering.
+                </p>
+            </div>
+
+            <div class="feature-card md:col-span-2">
+                <img src="./assets/device.png" class="w-12 mb-6" alt="Mobile">
+                <h4 class="text-xl font-bold mb-4">Mobile Friendly</h4>
+                <p class="text-gray-400 text-sm leading-relaxed">
+                    Listen on the go with seamless mobile experience and offline downloads.
+                </p>
+            </div>
+
+            <div class="feature-card md:col-span-2">
+                <img src="./assets/location.png" class="w-12 mb-6" alt="Global">
+                <h4 class="text-xl font-bold mb-4">Global Community</h4>
+                <p class="text-gray-400 text-sm leading-relaxed">
+                    Connect with tech enthusiasts from over 120 countries worldwide.
+                </p>
+            </div>
+
+            <div class="feature-card md:col-span-2">
+                <img src="./assets/thunder.png" class="w-12 mb-6" alt="Interviews">
+                <h4 class="text-xl font-bold mb-4">Exclusive Interviews</h4>
+                <p class="text-gray-400 text-sm leading-relaxed">
+                    Get unprecedented access to industry titans, startup founders, and tech visionaries.
+                </p>
+            </div>
+
+            <div class="feature-card">
+                <img src="./assets/resource.png" class="w-12 mb-6" alt="Resources">
+                <h4 class="text-xl font-bold mb-4">Rich Resources</h4>
+                <p class="text-gray-400 text-sm leading-relaxed">
+                    Access show notes, transcripts, and bonus learning materials for every episode.
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <section id="episodes" class="py-24 px-6 max-w-[1200px] mx-auto">
+        <h2 class="text-4xl font-bold text-center mb-20">Featured Episodes</h2>
+
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10 ">
+            <div class="episode-card">
+                <div class="relative group ">
+                    <img src="./assets/episode1.png" class="w-full h-full" alt="AI Episode">
+                    <a href="https://youtu.be/LyLCF7NvnqE" target="_blank" class="play-btn">▶</a>
+                </div>
+                <div class="p-8">
+                    <h4 class="text-xl font-bold text-[#00FF85] mb-4">The Future of AI in Everyday Life</h4>
+                    <p class="text-gray-400 text-sm mb-6">Exploring how artificial intelligence is transforming our daily routines.</p>
+                    <div class="flex items-center text-[#00FF85] text-sm font-bold">
+                        <img src="./assets/clock.png" class="w-4 h-4 mr-2" alt="Duration"> 42 min
+                    </div>
+                </div>
+            </div>
+
+            <div class="episode-card">
+                <div class="relative group w-100 h-100">
+                    <img src="./assets/episode2.png" class="w-full" alt="Remote Work Episode">
+                    <a href="https://youtu.be/W03aVbXWKj4" target="_blank" class="play-btn">▶</a>
+                </div>
+                <div class="p-8">
+                    <h4 class="text-xl font-bold mb-4">Building Better Habits for Remote Work</h4>
+                    <p class="text-gray-400 text-sm mb-6">Practical strategies for staying productive and maintaining balance.</p>
+                    <div class="flex items-center text-[#00FF85] text-sm font-bold">
+                        <img src="./assets/clock.png" class="w-4 h-4 mr-2" alt="Duration"> 35 min
+                    </div>
+                </div>
+            </div>
+
+            <div class="episode-card">
+                <div class="relative group w-100 h-100">
+                    <img src="./assets/episode3.png" class="w-full" alt="Career Episode">
+                    <a href="https://youtu.be/oz_xXYUv5YY" target="_blank" class="play-btn">▶</a>
+                </div>
+                <div class="p-8">
+                    <h4 class="text-xl font-bold mb-4">Career Growth in Tech: A Roadmap</h4>
+                    <p class="text-gray-400 text-sm mb-6">Expert advice on navigating your tech career from junior to senior leadership.</p>
+                    <div class="flex items-center text-[#00FF85] text-sm font-bold">
+                        <img src="./assets/clock.png" class="w-4 h-4 mr-2" alt="Duration"> 51 min
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="host" class="py-24 px-6 max-w-6xl mx-auto">
+        <h2 class="text-4xl font-bold text-center mb-20">Meet The Host</h2>
+
+        <div class="host-section p-10 lg:p-16 rounded-[40px] flex flex-col lg:flex-row items-center gap-14 border border-gray-800">
+            <img src="./assets/host.png" 
+                 class="w-56 h-56 lg:w-72 lg:h-72 rounded-full border-4 border-[#FF00CC] object-cover" alt="Alex Kumar">
+
+            <div class="text-center lg:text-left">
+                <h3 class="text-3xl font-bold mb-5">Alex Kumar</h3>
+                <p class="text-gray-400 mb-8 text-lg leading-relaxed">
+                    Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years, sharing insights and practical advice.
+                </p>
+                <div class="flex justify-center lg:justify-start gap-6">
+                    <a href="#"><img src="./assets/linkedin.png" class="w-6 hover:opacity-70 transition" alt="LinkedIn"></a>
+                    <a href="#"><img src="./assets/x.png" class="w-6 hover:opacity-70 transition" alt="X"></a>
+                    <a href="#"><img src="./assets/instagram.png" class="w-6 hover:opacity-70 transition" alt="Instagram"></a>
+                    <a href="#"><img src="./assets/youtube.png" class="w-6 hover:opacity-70 transition" alt="Instagram"></a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer-bg py-24 px-6 text-center">
+        <div class="text-5xl font-bold mb-10">
+            Tech<span class="gradient-text">Wave</span>
+        </div>
+
+        <div class="flex flex-wrap justify-center gap-8 text-gray-400 font-medium mb-12">
+            <span class="flex items-center hover:text-white transition cursor-pointer">
+                <img src="./assets/spotify.png" class="w-4 h-4 mr-2" alt="Spotify"> Spotify
+            </span>
+            <span class="flex items-center hover:text-white transition cursor-pointer">
+                <img src="./assets/apple-podcast.png" class="w-4 h-4 mr-2" alt="Apple Podcasts"> Apple Podcasts
+            </span>
+            <span class="flex items-center hover:text-white transition cursor-pointer">
+                <img src="./assets/youtube-podcast.png" class="w-4 h-4 mr-2" alt="YouTube"> YouTube
+            </span>
+            <span class="flex items-center hover:text-white transition cursor-pointer">
+                <img src="./assets/twitter.png" class="w-4 h-4 mr-2" alt="Twitter"> Twitter
+            </span>
+        </div>
+
+        
+        <p class="text-gray-600 text-xs">
+            © 2026 TechWave Podcast. All rights reserved.
+        </p>
+    </footer>
+
 </body>
 </html>
